--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/apbrt-logo.png" />
+<html lang="en"> 
+  <head> 
+    <meta charset="UTF-8" /> 
+    <link rel="icon" type="image/svg+xml" href="/src/assets/apbrt-logo.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bhargav's Portfolio</title>
-  </head>
+    <title>Bhargav's Portfolio</title> 
+  </head> 
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+    <header>
+      <img src="/src/assets/apbrt-logo.png" alt="Company Logo"> 
+    </header> <div id="root"></div> <script type="module" src="/src/main.tsx"></script> </body> </html>
